# DigiByte-ADN

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: shield-v4-real-oqs.yml  tests.yml
docs/: architecture.md  overview.md  risk_validator.md  technical-spec.md  whitepaper-adn-v2.md
docs/v3/: ARCHITECTURE.md  CONTRACT.md  EVIDENCE_FAMILIES.md  INDEX.md  MANIFEST.md  PROOF_PACK.md  REASON_IDS.md  RELEASE_STATUS_v3.2.0.md  TEST_MATRIX.md
docs/v4/: CONTRACT.md  MANIFEST.md  REAL_CRYPTO_BACKEND.md  TEST_MATRIX.md
examples/: example_adn_flow.py
src/adn_v2/: __init__.py  actions.py  adaptive_bridge.py  cli.py  config.py  engine.py  main.py  models.py  (+5 more)
tests/: basic_policy.py  test_adaptive_bridge_import_and_metadata.py  test_adn_v3_core_and_types_coverage.py  test_adn_v3_last_red_lines.py  test_adn_v3_missing_branches.py  test_adn_v3_term_missing_targets.py  test_basic_policy.py  test_contract_v3_bad_number_fail_closed.py  test_contract_v3_event_unknown_key_fail_closed.py  test_contract_v3_oversize_fail_closed.py  test_contract_v3_unknown_key_fail_closed.py  test_defense_engine.py  test_v2_v3_no_drift.py  test_v3_2_manifest_verdict_lock.py  test_v3_full_coverage_lock.py  test_v3_meta_determinism.py  test_v48g_real_oqs_mldsa_backend.py  test_v4_component_kat_vectors.py  test_v4_context_hash_signature_binding.py  test_v4_crypto_verdict_contract.py  test_v4_missing_signature_fail_closed.py  test_v4_oqs_mldsa_backend.py  test_v4_real_crypto_backend_contract.py  test_v4_signature_tamper_fail_closed.py
(+13 files in other folders)
